# allocator

./: .travis.yml  CMakeLists.txt  factor.h  main.cpp  test_factor.cpp
